[package]
name = "gatekeeper"
version = "2.2.0"
repository = "https://github.com/Idein/gatekeeper"
authors = ["takayuki goto <takayuki@idein.jp>"]
edition = "2018"
license-file = "LICENSE"
keywords = ["proxy", "socks"]
categories = ["network-programming"]
readme = "Readme.md"
description = "A SOCKS proxy implementation"

[lib]
name = "gatekeeper"
path = "src/lib.rs"

[[bin]]
name = "gatekeeperd"
path = "src/main.rs"

[dependencies]
derive_more = "0.99"
failure = "0.1.6"
log = "0.4.6"
net2 = "0.2.32"
pretty_env_logger = "0.3.0"
rand = "0.7.3"
regex = "1.3.5"
serde = { version = "1.0", features = ["derive"] }
serde_regex = "0.4.0"
serde_yaml = "0.8.17"
signal-hook = "0.1.13"
structopt = "0.2"
nix = "0.17.0"
libc = "0.2.60"

[dev-dependencies]
socks = "0.3.2"

