[package]
name = "gatekeeper"
version = "2.3.0"
repository = "https://github.com/Idein/gatekeeper"
authors = ["takayuki goto <takayuki@idein.jp>"]
edition = "2018"
license-file = "LICENSE"
keywords = ["proxy", "socks"]
categories = ["network-programming"]
readme = "Readme.md"
description = "A SOCKS proxy implementation"

[lib]
name = "gatekeeper"
path = "src/lib.rs"

[[bin]]
name = "gatekeeperd"
path = "src/main.rs"

[dependencies]
derive_more = "0.99"
failure = "0.1.6"
log = "0.4.6"
socket2 = "0.5"
pretty_env_logger = "0.4"
rand = "0.8"
regex = "1.5.5"
serde = { version = "1.0", features = ["derive"] }
serde_regex = "1.1"
serde_yaml = "0.8.26"
signal-hook = "0.3"
clap = { version = "4.1", features = ["derive"] }
nix = "0.26"
libc = "0.2.60"

[dev-dependencies]
socks = "0.3.2"

