[package]
name = "gatekeeper"
version = "0.1.0"
repository = "https://github.com/Idein/gatekeeper"
authors = ["takayuki goto <takayuki@idein.jp>"]
edition = "2018"
license-file = "../LICENSE"
keywords = ["proxy", "socks"]
categories = ["network-programming"]
readme = "../Readme.md"
description = "A SOCKS proxy implementation"

[lib]
name = "gatekeeper"
path = "src/lib.rs"

[[bin]]
name = "gatekeeperd"
path = "src/main.rs"

[dependencies]
structopt = "0.2"
failure = "0.1.6"
pretty_env_logger = "0.3.0"
log = "0.4.6"
serde = "1"
serde_derive = "1"
net2 = "0.2.32"
signal-hook = "0.1.13"
model = { path = "../model" }
serde_yaml = "0.8"
rand = "0.7.3"

[dev-dependencies]
socks = "0.3.2"

