[package]
name = "model"
version = "0.1.0"
authors = ["takayuki goto <takayuki@idein.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.6"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1"
derive_more = "0.99"
regex = "1.3.5"
log = "0.4.6"
serde_yaml = "0.8"
serde_regex = "0.4.0"
